--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
+            collection.md
             main.js
             manifest.json
             styles.css
