--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "obsidian-prologue",
-  "version": "0.2.0",
+  "name": "prologue",
+  "version": "1.0.0",
   "description": "Display a random quote or reminder on the new tab page.",
   "main": "main.js",
   "scripts": {
     "dev": "node esbuild.config.mjs",
-    "validate": "biome check --write",
     "build": "tsc --noEmit --skipLibCheck && node esbuild.config.mjs production",
-    "version": "node version-bump.mjs && git add manifest.json versions.json",
-    "prepare": "husky"
+    "prepare": "husky",
+    "validate": "biome check --write",
+    "version": "node version-bump.mjs && git add manifest.json versions.json"
   },
   "keywords": [
     "obsidian",
-    "plugin",
-    "tab"
+    "obsidian-plugin",
+    "new-tab"
   ],
   "author": "Josh Avanier",
   "license": "MIT",
